xf86-video-ati: => 7.5.0

--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,8 @@
+2014-10-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 7.5.0
+	* DEPENDS: remove duplicate
+	  add libpciaccess
+
 2014-09-27 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: simplified mesalib with DRI request, removed merge
 	  marks crap
