--- a/libs/icu/HISTORY
+++ b/libs/icu/HISTORY
@@ -1,3 +1,6 @@
+2014-10-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 54.1 (both)
+
 2014-04-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 53.1 (both)
 
