--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,7 @@
+2014-10-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.0
+	* DEPENDS, CONFIGURE: openssl is no longer supported
+
 2014-09-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add krb5
 	* FINAL: specify default_final
