ulimits: new spell, user limits utility

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-10-02 Vlad Glagolev <stealth@sourcemage.org>
+	* utils/ulimits: new spell, user limits utility
+
 2014-09-29 Vlad Glagolev <stealth@sourcemage.org>
 	* net/megatools: new spell, command line client for mega.co.nz
 	* http/phantomjs: new spell, headless WebKit scriptable with a
