--- a/gnome2-libs/gtk-doc/HISTORY
+++ b/gnome2-libs/gtk-doc/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.21
+
 2014-01-14 Tommy Boatman <tboatman@sourcemage.org>
 	* DEPENDS: requires itstool
 
