--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,8 @@
+2014-10-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++ (yet another fix for unannounced CVE from
+	  Michal Zalewski)
+	* patches/bash43-029: added, official patch
+
 2014-10-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: SECURITY_PATCH++ (final ShellShock fixes for CVE-2014-6277
 	  and CVE-2014-6278 found by Michal Zalewski)
