--- a/gnome2-libs/atk/HISTORY
+++ b/gnome2-libs/atk/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.14.0
+
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.12.0
 
