--- a/x11-toolkits/gtk+3/HISTORY
+++ b/x11-toolkits/gtk+3/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.14.1
+
 2014-08-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.13.6
 
