--- a/graphics-libs/poppler/HISTORY
+++ b/graphics-libs/poppler/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.26.5
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
