--- a/gnome3-libs/libsecret/HISTORY
+++ b/gnome3-libs/libsecret/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.18
+
 2014-01-25 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 0.16
 
