--- a/net/whois/HISTORY
+++ b/net/whois/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 5.2.0
+
 2014-08-28 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated spell to 5.1.5
 
