--- a/shell-term-fm/mksh/HISTORY
+++ b/shell-term-fm/mksh/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to R50c; SECURITY_PATCH++
+
 2014-09-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to R50b
 
