disk/lvm: version 2.02.111

--- a/disk/lvm/HISTORY
+++ b/disk/lvm/HISTORY
@@ -1,3 +1,6 @@
+2014-10-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.02.111
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: 2.02.109
 	* lvm-static-hotfix.patch, PRE_BUILD: dirty hack to link missing libs
