--- a/audio-creation/ardour3/HISTORY
+++ b/audio-creation/ardour3/HISTORY
@@ -1,3 +1,6 @@
+2014-10-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.403
+
 2014-06-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.5.380; switched back to sourcemage url;
 	  added 2nd mirror
