--- a/archive/dpkg/HISTORY
+++ b/archive/dpkg/HISTORY
@@ -1,3 +1,8 @@
+2014-10-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.17.13
+
+	* DETAILS: version 1.14.29
+
 2014-04-15 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.17.6.
 	  Switched to xz-compressed source.
