--- a/archive/cdebootstrap/HISTORY
+++ b/archive/cdebootstrap/HISTORY
@@ -1,3 +1,6 @@
+2014-10-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.6.3
+
 2013-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.5.10
 	  fixed build directory
