--- a/archive/debian-archive-keyring/HISTORY
+++ b/archive/debian-archive-keyring/HISTORY
@@ -1,3 +1,6 @@
+2014-10-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2014.1
+
 2013-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 2012.4
 	* DETAILS, INSTALL: cleanup
