--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-10-05 Pol Vinogradov <vin.public@gmail.com>
+	* http/dwb: new spell, a WebKt based browser
+
 2014-10-02 Vlad Glagolev <stealth@sourcemage.org>
 	* utils/ulimits: new spell, user limits utility
 
