http/dwb: fixed a typo in grimoire's ChangeLog, replaced PREFIX with DESTDIR in INSTALL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2014-10-05 Pol Vinogradov <vin.public@gmail.com>
-	* http/dwb: new spell, a WebKt based browser
+	* http/dwb: new spell, a WebKit based browser
 
 2014-10-02 Vlad Glagolev <stealth@sourcemage.org>
 	* utils/ulimits: new spell, user limits utility
