--- a/http/dwb/INSTALL
+++ b/http/dwb/INSTALL
@@ -1,5 +1,5 @@
 if is_depends_enabled $SPELL gtk+3 ; then
-  make GTK=3 DESTDIR=${INSTALL_ROOT}/usr install
+  make GTK=3 install
 else
-  make DESTDIR=${INSTALL_ROOT}/usr install
+  make install
 fi
