--- a/devel/make/HISTORY
+++ b/devel/make/HISTORY
@@ -1,3 +1,6 @@
+2014-01-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.1
+
 2014-09-23 Ismael Luceno <ismael@sourcemage.org>
 	* INSTALL: Install gmake symlink
 
