bash 4.3.30, SECURITY_PATCH=8 (cherry picked from commit e88ce9afb4c87ccfe8361f0ff7f45374d40d8733)

--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,8 @@
+2014-10-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.3.30, SECURITY_PATCH=8
+	* patches/bash43-026, patches/bash43-028: official patches updated
+	* patches/bash43-030: official patch added
+
 2014-10-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: SECURITY_PATCH++ (yet another fix for unannounced CVE from
 	  Michal Zalewski)
