--- a/devel/extra-cmake-modules/HISTORY
+++ b/devel/extra-cmake-modules/HISTORY
@@ -1,3 +1,6 @@
+2014-10-07  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.0
+
 2014-09-16  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.1
 
