--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,7 @@
+2014-10-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.5.0
+	* DEPENDS: add UDEV
+
 2014-09-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.4.5
 
