--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-10-07 Treeve Jelbert <treeve@sourcemage.org>
+	* devel/sparsehash: added, efficient memory hash
+
 2014-10-05 Pol Vinogradov <vin.public@gmail.com>
 	* http/dwb: new spell, a WebKit based browser
 
@@ -45,6 +48,7 @@
 
 2014-09-15 Ismael Luceno <ismael@sourcemage.org>
 	* editors/vim-csapprox: new spell, Make gvim-only colorschemes work
+
 	  transparently in terminal vim
 
 2014-09-14 Ismael Luceno <ismael@sourcemage.org>
