http/dwb: browser needs gnutls and json-c

--- a/http/dwb/HISTORY
+++ b/http/dwb/HISTORY
@@ -1,3 +1,6 @@
+2014-10-07 Pol Vinogradov <vin.public@gmail.com>
+	* DEPENDS: added gnutls and json-c
+
 2014-10-05 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD, DEPENDS, DETAILS, INSTALL, PREPARE,
 	  PROVIDES: created spell
