--- a/security-libs/cracklib/HISTORY
+++ b/security-libs/cracklib/HISTORY
@@ -1,3 +1,6 @@
+2014-10-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.2
+
 2013-12-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.9.1
 	* PRE_BUILD: remove obsolete fixes
