--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2014-10-08 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=3.17, LATEST_3=3.17
+	* info/kernels/3.17: added
+	* info/patches/maintenance_patches_3/patch-3.17: added
+
 2014-09-29 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.16.3
 	* info/patches/maintenance_patches_3/patch-3.16.3: added
