--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,8 @@
+2014-10-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add flags for acl
+	  remove references to openssl
+	  mdnsresponder is now optional
+
 2014-10-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.0
 	* DEPENDS, CONFIGURE: openssl is no longer supported
