--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,6 @@
+2014-10-08 Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTSL fix permissions
+
 2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
 	* PROVIDES, CONFLICTS: added, to allow libressl as na alternative
 	* UP_TRIGGERS: test for libressl as well
