kernels/virtualbox-module: version 4.3.16

--- a/kernels/virtualbox-module/HISTORY
+++ b/kernels/virtualbox-module/HISTORY
@@ -1,3 +1,6 @@
+2014-10-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.3.16
+
 2012-11-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.2.4
 
