--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,9 @@
+2014-10-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.3.16, TMPFS=off
+	* BUILD: fix compile error on x86_64
+	* INSTALL: fix install error on x86_64
+	* DEPENDS: add dependency on lvm
+
 2012-11-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.2.4
 
