--- a/utils/virtualbox/INSTALL
+++ b/utils/virtualbox/INSTALL
@@ -1,5 +1,5 @@
 mkdir -p /opt/virtualbox                  &&
-cd out/linux.x86/release/bin              &&
+cd out/linux.*/release/bin &&
 
 # generating of source tarball for virtualbox-module spell
 # $SOURCE_CACHE/virtualbox-module-$VERSION.tar.gz
