--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-10-08 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.4.6
+
 2014-07-12 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.4.4
 
