--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2014-10-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.60
+
 2014-09-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.59
 
