--- a/graphics/shotwell/HISTORY
+++ b/graphics/shotwell/HISTORY
@@ -1,3 +1,6 @@
+2014-10-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.20.1
+
 2014-06-27 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: depends on rest
 	* DETAILS: Fixed SOURCE_URL[0]
