--- a/graphics/gexiv2/HISTORY
+++ b/graphics/gexiv2/HISTORY
@@ -1,3 +1,6 @@
+2014-10-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.10.2
+
 2014-09-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.10.1
 
