--- a/education/klavaro/HISTORY
+++ b/education/klavaro/HISTORY
@@ -1,3 +1,7 @@
+2014-10-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.01
+	* CONFLICTS: removed, fixed by upstream (renamed library)
+
 2014-01-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.00
 	* DEPENDS: renewed dependencies
