--- a/disk/partclone/HISTORY
+++ b/disk/partclone/HISTORY
@@ -1,3 +1,6 @@
+2014-10-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.73
+
 2014-08-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.72
 
