cups-filters - add depends + trigger

--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,7 @@
+2014-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* TRIGGERS: added
+	* DEPENDS: add cups, dbus
+
 2014-10-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.60
 
