--- a/utils/at/HISTORY
+++ b/utils/at/HISTORY
@@ -1,3 +1,7 @@
+2014-10-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.1.16; updated website; quoting paths
+	* BUILD: added missing make commands
+
 2012-05-10 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: Use make_single
 
