--- a/xorg-app/xcb-util/HISTORY
+++ b/xorg-app/xcb-util/HISTORY
@@ -1,4 +1,7 @@
-2012--5-31 Treeve Jelbert <treeve@sourcemage.org>
+2014-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.0
+
+2012-05-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.9
 	* DEPENDS: remove gperf
 
