--- a/xorg-app/xcb-util-image/HISTORY
+++ b/xorg-app/xcb-util-image/HISTORY
@@ -1,3 +1,6 @@
+2014-10-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.0
+
 2012-05-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.9
 
