--- a/python-pypi/pyasn1/HISTORY
+++ b/python-pypi/pyasn1/HISTORY
@@ -1,3 +1,6 @@
+2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.1.7
+
 2013-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.1.6
 
