nbxmpp: new spell, non-blocking Jabber/XMPP module

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/nbxmpp: new spell, non-blocking Jabber/XMPP module
+
 2014-10-07 Treeve Jelbert <treeve@sourcemage.org>
 	* devel/sparsehash: added, efficient memory hash
 
