--- a/chat-im/gajim/HISTORY
+++ b/chat-im/gajim/HISTORY
@@ -1,3 +1,8 @@
+2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.16; updated source url and website
+	* DEPENDS: corrected pyasn1 dependency class
+	* PRE_BUILD, gtalk.patch: dropped
+
 2013-05-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.15.4
 
