--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-10-15 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.17.1
+	* info/patches/maintenance_patches_3/patch-3.17.1: added
+
 2014-10-08 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=3.17, LATEST_3=3.17
 	* info/kernels/3.17: added
