--- a/mail/postfix/HISTORY
+++ b/mail/postfix/HISTORY
@@ -1,5 +1,9 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-10-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.10
+	* BUILD, TRIGGERS: corrected SSL handling
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-04-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.9
