--- a/editors/tea/HISTORY
+++ b/editors/tea/HISTORY
@@ -1,3 +1,7 @@
+2014-10-16 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 38.0.0, WEB_SITE updated
+	* PRE_BUILD: added
+
 2014-02-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 37.1.0
 	  new url
