--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,6 @@
+2014-10-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.19.3
+
 2014-10-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: fix typo
 
