--- a/doc/evince/HISTORY
+++ b/doc/evince/HISTORY
@@ -1,3 +1,7 @@
+2014-10-18 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 3.14.1, simplified branch substraction
+	  in SOURCE_URL, evince was replaced with $SPELL also
+
 2014-09-19 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: 3.13.92
 	* DEPENDS: adwaita icons replaced symbolic ones
