gnome3-libs/adwaita-icon-theme: version 3.14.0

--- a/gnome3-libs/adwaita-icon-theme/HISTORY
+++ b/gnome3-libs/adwaita-icon-theme/HISTORY
@@ -1,2 +1,5 @@
+2014-10-18 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 3.14.0, simplified branch substraction
+
 2014-09-19 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: created spell
