mesalib: fix syntax and logic errors

--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,8 @@
+2014-10-18 Jeremy Blosser <jblosser@sourcemage.org>
+	* DETAILS: Add missing 'fi'.
+	* CONFIGURE: Account for $GALLIUM_DRIVERS getting stored as "" when set
+	  to "none".
+
 2014-09-25 Treeve Jelbert <treeve@sourcemage.org>
 	* rename spell => mesalib
 	* UP_TRIGGERS: added, detect old mesalib libraries
