more mesalib-1x merge logic fixes

--- a/x11-toolkits/wxgtk/HISTORY
+++ b/x11-toolkits/wxgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-10-18  Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: Remove old mesalib-1x logic, depends glu.
+
 2014-09-25  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: MESALIB => mesalib
 
