--- a/graphics-libs/freeglut/HISTORY
+++ b/graphics-libs/freeglut/HISTORY
@@ -1,3 +1,6 @@
+2014-10-18 Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: Remove old mesalib-1x logic, depends glu.
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: separate glu for mesalib-1x
 
