--- a/x11-libs/cairo/HISTORY
+++ b/x11-libs/cairo/HISTORY
@@ -1,3 +1,7 @@
+2014-10-18 Jeremy Blosser <jblosser@sourcemage.org>
+	* PRE_BUILD, cairo-1.12.16-lto-optional.patch: add --disable-lto option.
+	* CONFIGURE: Query for --disable-lto.
+
 2014-09-09 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: missing libxext
 
