--- a/x11/xautolock/HISTORY
+++ b/x11/xautolock/HISTORY
@@ -1,3 +1,6 @@
+2014-10-19 Jeremy Blosser <jblosser@sourcemage.org>
+	* DEPENDS: gccmakedep
+
 2013-11-09 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFIGURE: added, to add option for reading .Xdefaults file to get X
 	  resources values
