--- a/graphics/lensfun/HISTORY
+++ b/graphics/lensfun/HISTORY
@@ -1,3 +1,6 @@
+2014-10-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.3.0
+
 2014-08-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.2.8, fix WEB_SITE
 
