--- a/libs/openscenegraph/HISTORY
+++ b/libs/openscenegraph/HISTORY
@@ -1,3 +1,6 @@
+2014-10-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 3.2.1
+
 2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: giflib => GIFLIB
 
