python-pypi/botocore: new spell, low-level aws interface library

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2014-10-20 Jeremy Blosser <jblosser@sourcemage.org>
 	* editors/jq: new spell, stream editor/filter for JSON data
+	* python-pypi/botocore: new spell, low-level aws interface library
 
 2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/nbxmpp: new spell, non-blocking Jabber/XMPP module
