python-pypi/bcdoc: new spell, tools to help document botocore-based projects

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2014-10-20 Jeremy Blosser <jblosser@sourcemage.org>
 	* editors/jq: new spell, stream editor/filter for JSON data
 	* python-pypi/botocore: new spell, low-level aws interface library
+	* python-pypi/bcdoc: new spell, tools to help document botocore-based projects
 
 2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/nbxmpp: new spell, non-blocking Jabber/XMPP module
