python-pypi/jmespath: new spell, module to extract elements from a JSON document

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* editors/jq: new spell, stream editor/filter for JSON data
 	* python-pypi/botocore: new spell, low-level aws interface library
 	* python-pypi/bcdoc: new spell, tools to help document botocore-based projects
+	* python-pypi/jmespath: new spell, module to extract elements from a JSON document
 
 2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/nbxmpp: new spell, non-blocking Jabber/XMPP module
