--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* python-pypi/botocore: new spell, low-level aws interface library
 	* python-pypi/bcdoc: new spell, tools to help document botocore-based projects
 	* python-pypi/jmespath: new spell, module to extract elements from a JSON document
+	* python-pypi/coloram: new spell, cross-platform colored terminal text
 
 2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/nbxmpp: new spell, non-blocking Jabber/XMPP module
