python-pypi/aws-cli: new spell, unified command line interface to aws

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 	* python-pypi/botocore: new spell, low-level aws interface library
 	* python-pypi/bcdoc: new spell, tools to help document botocore-based projects
 	* python-pypi/jmespath: new spell, module to extract elements from a JSON document
-	* python-pypi/coloram: new spell, cross-platform colored terminal text
+	* python-pypi/colorama: new spell, cross-platform colored terminal text
+	* python-pypi/aws-cli: new spell, unified command line interface to aws
 
 2014-10-15 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/nbxmpp: new spell, non-blocking Jabber/XMPP module
