at: fixed docdir

--- a/utils/at/HISTORY
+++ b/utils/at/HISTORY
@@ -1,3 +1,7 @@
+2014-10-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* PRE_BUILD: added, to fix docdir
+
 2014-10-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.1.16; updated website; quoting paths
 	* BUILD: added missing make commands
