--- a/libs/mxml/HISTORY
+++ b/libs/mxml/HISTORY
@@ -1,3 +1,6 @@
+2014-10-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9; updated source urls
+
 2012-04-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.7
 
