--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2014-10-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.8.7
+
 2014-08-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.8.6
 
