--- a/audio-soft/asunder/HISTORY
+++ b/audio-soft/asunder/HISTORY
@@ -1,3 +1,6 @@
+2014-10-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.5
+
 2010-12-14 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 2.0
 	* DEPENDS: added dependencies on wavpack and mac
