--- a/mail/postfix/HISTORY
+++ b/mail/postfix/HISTORY
@@ -1,3 +1,6 @@
+2014-10-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.11
+
 2014-10-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.10
 	* BUILD, TRIGGERS: corrected SSL handling
