--- a/libs/libbsd/HISTORY
+++ b/libs/libbsd/HISTORY
@@ -1,3 +1,8 @@
+2014-10-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.0
+	* libbsd.gpg: added A4AE57A3 public key (Guillem Jover
+	  <guillem@hadrons.org>)
+
 2013-08-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.6.0; renewed source extension;
 	  converted to upstream signature checking
