postfix: post-update fixes

--- a/mail/postfix/HISTORY
+++ b/mail/postfix/HISTORY
@@ -1,5 +1,8 @@
 2014-10-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.11
+	* INSTALL: use sorcery function note_config_file() from libtrack; added
+	  virtual config file to tracking list; prevent main.cf from trashing on
+	  upgrade too; install qmqp-sink tool
 
 2014-10-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.10
