postfix: removed obsolete options + more post-update fixes

--- a/mail/postfix/HISTORY
+++ b/mail/postfix/HISTORY
@@ -1,8 +1,12 @@
 2014-10-22 Vlad Glagolev <stealth@sourcemage.org>
-	* DETAILS: updated spell to 2.9.11
-	* INSTALL: use sorcery function note_config_file() from libtrack; added
-	  virtual config file to tracking list; prevent main.cf from trashing on
-	  upgrade too; install qmqp-sink tool
+	* DETAILS: updated spell to 2.9.11; PATCHLEVEL=1
+	* INSTALL: dropped unneeded config tracking; install qmqp-sink tool and
+	  all benchmarking utility manual pages; checked build for both castfs
+	  and non-castfs installations
+	* BUILD: fixed comment about manual installation; removed sed magic
+	* CONFIGURE: removed obsolete configure options and persistent vars
+	* protected: added, to keep main.cf config file, it is managed by
+	  upstream postfix-install script
 
 2014-10-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.10
