--- a/mail/postfix/INSTALL
+++ b/mail/postfix/INSTALL
@@ -1,43 +1,19 @@
-local upstream_conf="main.cf \
-                     master.cf \
-                     aliases \
-                     access \
-                     canonical \
-                     generic \
-                     header_checks \
-                     relocated \
-                     transport \
-                     virtual" &&
-
-for conf_file in ${upstream_conf}; do
-  message "${MESSAGE_COLOR}Marking configuration file ${conf_file}...${DEFAULT_COLOR}" &&
-  note_config_file "$INSTALL_ROOT/etc/postfix/${conf_file}"
-done &&
-
-if [[ "$POSTFIX_PRE_EXISTING" == "no" ]]; then
-    # the below are the answers to the interactive install
-    /bin/bash postfix-install -non-interactive \
-              install_root="$INSTALL_ROOT" \
-              tempdir="$SOURCE_DIRECTORY" \
-              config_directory="$INSTALL_ROOT/etc/postfix" \
-              daemon_directory="$INSTALL_ROOT/usr/libexec/postfix" \
-              command_directory="$INSTALL_ROOT/usr/sbin" \
-              queue_directory="$INSTALL_ROOT/var/spool/postfix" \
-              sendmail_path="$INSTALL_ROOT/usr/sbin/sendmail" \
-              newaliases_path="$INSTALL_ROOT/usr/bin/newaliases" \
-              mailq_path="$INSTALL_ROOT/usr/bin/mailq" \
-              mail_owner=postfix \
-              setgid_group=postdrop \
-              html_directory=no \
-              manpage_directory="$INSTALL_ROOT/usr/share/man" \
-              readme_directory=no &&
-
-    # fix the default manpage_directory
-    sed -i -e "s|manpage_directory.*=.*|manpage_directory = $INSTALL_ROOT/usr/share/man|" /etc/postfix/main.cf
-else
-    # preexisting install found doing the upgrade, which is unattended
-    make upgrade
-fi &&
+# the below are the answers to the interactive install
+/bin/bash postfix-install -non-interactive \
+          install_root="$INSTALL_ROOT" \
+          tempdir="$SOURCE_DIRECTORY" \
+          config_directory="$INSTALL_ROOT/etc/postfix" \
+          daemon_directory="$INSTALL_ROOT/usr/libexec/postfix" \
+          command_directory="$INSTALL_ROOT/usr/sbin" \
+          queue_directory="$INSTALL_ROOT/var/spool/postfix" \
+          sendmail_path="$INSTALL_ROOT/usr/sbin/sendmail" \
+          newaliases_path="$INSTALL_ROOT/usr/bin/newaliases" \
+          mailq_path="$INSTALL_ROOT/usr/bin/mailq" \
+          manpage_directory="$INSTALL_ROOT/usr/share/man" \
+          mail_owner=postfix \
+          setgid_group=postdrop \
+          html_directory=no \
+          readme_directory=no &&
 
 ln -sf ../sbin/sendmail "$INSTALL_ROOT/usr/lib/sendmail" &&
 ln -sf postfix/aliases "$INSTALL_ROOT/etc/aliases" &&
@@ -45,7 +21,10 @@ ln -sf postfix/aliases "$INSTALL_ROOT/etc/aliases" &&
 if [[ "$POSTFIX_BENCH" == "y" ]]; then
     local file &&
 
+    mkdir -p "$INSTALL_ROOT/usr/share/man/man1" &&
+
     for file in qmqp-sink qmqp-source smtp-sink smtp-source; do
-        install -v -m 544 "src/smtpstone/$file" "$INSTALL_ROOT/usr/sbin"
+        install -v -m 544 "src/smtpstone/$file" "$INSTALL_ROOT/usr/sbin" &&
+        install -v -m 644 "man/man1/$file.1" "$INSTALL_ROOT/usr/share/man/man1/"
     done
 fi
