postfix: ignore running queue files

--- a/mail/postfix/HISTORY
+++ b/mail/postfix/HISTORY
@@ -7,6 +7,7 @@
 	* CONFIGURE: removed obsolete configure options and persistent vars
 	* protected: added, to keep main.cf config file, it is managed by
 	  upstream postfix-install script
+	* volatiles: added, for non-tracking of queue files
 
 2014-10-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.10
