at: fixed permissions on atjobs dir

--- a/utils/at/INSTALL
+++ b/utils/at/INSTALL
@@ -1,4 +1,9 @@
-default_install  &&
-if [ ! -e /etc/at.deny ]; then
-  cp  at.deny  /etc
+default_install &&
+
+if [ ! -d "$INSTALL_ROOT/var/spool/atjobs" ] || [ `stat -c '%a' $INSTALL_ROOT/var/spool/atjobs` -ne 770 ]; then
+  install -vm 770 -o at -g at -d "$INSTALL_ROOT/var/spool/atjobs"
+fi &&
+
+if [ ! -e "$INSTALL_ROOT/etc/at.deny" ]; then
+  cp at.deny "$INSTALL_ROOT/etc/"
 fi
