--- a/utils/at/HISTORY
+++ b/utils/at/HISTORY
@@ -1,3 +1,8 @@
+2014-10-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* BUILD: put atjobs dir installation to INSTALL
+	* INSTALL: use INSTALL_ROOT; fix permissions on atjobs dir
+
 2014-10-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: added, to fix docdir
