--- a/libs/nspr/INSTALL
+++ b/libs/nspr/INSTALL
@@ -2,10 +2,8 @@
 make install &&
 
 # NSS configuration info
-install --mode=755 config/nspr-config                $INSTALL_ROOT/usr/bin            &&
-install --mode=644 $SCRIPT_DIRECTORY/nspr.pc $INSTALL_ROOT/usr/lib/pkgconfig/ &&
-# setup pkg-config file to have the correct version number
-sedit  "s/VERSION/$(config/nspr-config --version)/"  $INSTALL_ROOT/usr/lib/pkgconfig/nspr.pc  &&
+install --mode=755 config/nspr-config "$INSTALL_ROOT/usr/bin" &&
+install --mode=644 config/nspr.pc "$INSTALL_ROOT/usr/lib/pkgconfig/" &&
 
 # manually do the real install, keeping in mind that most of these files are symlinks
 cd dist &&
