--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,11 @@
+2014-10-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.10.7; use spell variable in source url
+	* DEPENDS: corrected c++ flag
+	* INSTALL: install generated nspr.pc file
+	* BUILD: externally link with stdc++
+	* PRE_BUILD: added, to fix build with c++ enabled
+	* nspr.pc: dropped, replaced by upstream version
+
 2014-06-10 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: 4.10.6
 
