--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,10 @@
+2014-10-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.17.2; moved DEFAULT branch setting to
+	  PREPARE
+	* PREPARE, {PRE_,}SUB_DEPENDS: added 3.17 branch
+	* BUILD, DEPENDS, INSTALL, PRE_BUILD: use is_version_less() function
+	  for branch versions comparison
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: sqlite
 
