--- a/http/seamonkey/HISTORY
+++ b/http/seamonkey/HISTORY
@@ -1,3 +1,14 @@
+2014-10-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.30; SECURITY_PATCH++
+	* BUILD: use system libbz2
+	* DEPENDS: updated requirements -- nspr (>=4.10.3), nss (>=3.17.1),
+	  sqlite (>=3.8.5); added dependencies -- bzip2 (req), hunspell (opt),
+	  pulseaudio (opt), gstreamer/gstreamer-1.0 (opt)
+	* CONFIGURE: added options for hunspell and gstreamer
+	* PRE_BUILD: apply strip.patch
+	* mailnews.patch: updated for new version
+	* strip.patch: added, to fix compilation for stripped builds
+
 2014-09-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.29, SECURITY_PATCH=57
 	* DEPENDS: nss >= 3.16.2 is needed
