--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2014-10-23 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.4.7
+
 2014-10-08 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.4.6
 
