--- a/http/webkitgtk3/HISTORY
+++ b/http/webkitgtk3/HISTORY
@@ -1,3 +1,6 @@
+2014-10-23 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.6.2
+
 2014-10-07 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.6.0
 
