--- a/wm-addons/cairo-dock-plugins/HISTORY
+++ b/wm-addons/cairo-dock-plugins/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 3.4.0
+
 2014-07-03 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 3.3.2
 
