--- a/libs/ldns/HISTORY
+++ b/libs/ldns/HISTORY
@@ -1,3 +1,9 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* DEPENDS, CONFIGURE: moved openssl branch selection to CONFIGURE to
+	  avoid sub-dependency error when cast of the spell queues 1.0 branch
+	  of openssl in global sub_depends file for next recast
+
 2014-05-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.17
 	* DEPENDS: added warning on switching openssl branches; added perl
