--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,7 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.24 (devel)
+	* DEPENDS: use SSL provider
+
 2014-07-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.18 (devel); readability++
 
