--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: corrected ssl flags
+
 2014-10-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.4.34 (stable); SECURITY_PATCH++
 	  (CVE-2014-3668, CVE-2014-3669, CVE-2014-3670)
