lighttpd: use SSL provider

--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: use SSL provider
+
 2014-08-03 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply patch
 	* DEPENDS: lua51 -> LUA
