--- a/security/nmap/HISTORY
+++ b/security/nmap/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: use SSL provider
+
 2014-09-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.47
 
