--- a/crypto/cyrus-sasl/HISTORY
+++ b/crypto/cyrus-sasl/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: use SSL provider
+
 2012-05-28 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: added sqlite optional_depends
 	* PRE_BUILD: patch to fix compilation with sqlite
