--- a/net/flow-tools/HISTORY
+++ b/net/flow-tools/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: use SSL provider
+
 2010-12-18 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS, INSTALL, PROVIDES,
 	  init.d/flow-capture{,.conf}: spell created
