--- a/net/bind-tools/HISTORY
+++ b/net/bind-tools/HISTORY
@@ -1,3 +1,7 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 9.9.6; SECURITY_PATCH++
+	* DEPENDS: use SSL provider
+
 2012-12-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.9.2-P1; SECURITY_PATCH++
 
