--- a/php-pear/php4/HISTORY
+++ b/php-pear/php4/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, BUILD: use SSL provider
+
 2010-11-03 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: jpeg -> JPEG
 
