--- a/i18n/ibus/HISTORY
+++ b/i18n/ibus/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.5.5
+
 2013-09-06 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 1.5.3
 	* DEPENDS: updated to current depends and added optionals
