--- a/i18n/uim/HISTORY
+++ b/i18n/uim/HISTORY
@@ -1,3 +1,6 @@
+2014-10-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.8.6
+
 2011-10-12 Bor Kraljič <pyrobor@ver.si>
 	* DEPENDS: removed optional dependency on qt-x11
 
