--- a/devel/llvm/HISTORY
+++ b/devel/llvm/HISTORY
@@ -1,3 +1,7 @@
+2014-10-24 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 3.5.0, .gz -> .xz, removed COMPILERRT_VERSION and LLDB_VERSION
+	* PRE_BUILD: removed PIC related fix, applied *VERSION changes
+
 2014-08-24 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: disable TMPFS, as build needs 5 GiB on disk, plus actual RAM for
 	  compiling
