--- a/kernels/kmod/HISTORY
+++ b/kernels/kmod/HISTORY
@@ -1,3 +1,7 @@
+2014-10-25 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 18
+
 2013-04-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 5
 
