--- a/libs/icu/HISTORY
+++ b/libs/icu/HISTORY
@@ -1,3 +1,6 @@
+2014-10-25 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS:update sha512 sum
+
 2014-10-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 54.1 (both)
 
