nss: => 3.16.6 (3.16); re-enabled PEM support in the last versions; rewritten SUB_DEPENDS

--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,8 @@
+2014-10-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.16.6 (3.16); SECURITY_PATCH++
+	  (CVE-2014-1568)
+	* SUB_DEPENDS: PEM is nicely supported in >3.15; use message; cleaned up
+
 2014-10-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.17.2; moved DEFAULT branch setting to
 	  PREPARE
