--- a/net/libreswan/HISTORY
+++ b/net/libreswan/HISTORY
@@ -1,3 +1,6 @@
+2014-10-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.11
+
 2014-09-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.10
 
