--- a/net/cpuminer/HISTORY
+++ b/net/cpuminer/HISTORY
@@ -1,3 +1,7 @@
+2014-10-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4
+	* DEPENDS: added jansson optional dependency
+
 2013-11-24 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Switched to pooler's fork, version 2.3.2
 
