--- a/utils/pciutils/HISTORY
+++ b/utils/pciutils/HISTORY
@@ -1,3 +1,6 @@
+2014-10-26 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Added optional dependency on kmod
+
 2013-04-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.2.0
 
