--- a/utils/pciutils/HISTORY
+++ b/utils/pciutils/HISTORY
@@ -1,4 +1,5 @@
 2014-10-26 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.2.1
 	* DEPENDS: Added optional dependency on kmod
 
 2013-04-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
