xen: added 4.2 branch

--- a/utils/xen/HISTORY
+++ b/utils/xen/HISTORY
@@ -1,3 +1,10 @@
+2014-09-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.2.5 (4.2); SECURITY_PATCH++
+	* DEPENDS: added missing yajl dependency
+	* PREPARE: added branching
+	* PRE_BUILD: apply patch
+	* prefix.patch: added, to fix man/conf installation path
+
 2014-07-07 Ismael Luceno <ismael@sourcemage.org>
 	* BUILD, PRE_BUILD: Run the configure script, it runs subdirs in turn
 
