--- a/python-pypi/trac/HISTORY
+++ b/python-pypi/trac/HISTORY
@@ -1,3 +1,6 @@
+2014-10-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.12.6
+
 2013-12-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added flup suggest dependency
 
