--- a/http/tinyproxy/HISTORY
+++ b/http/tinyproxy/HISTORY
@@ -1,3 +1,8 @@
+2014-10-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: SECURITY_PATCH++
+	* PRE_BUILD: apply patch
+	* headers.patch: added, to fix CVE-2012-3505, ported from OpenBSD
+
 2012-10-08 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: fixed install with automake 1.12
 
