ftp/wget: version 1.16

--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,7 @@
+2014-10-27 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 1.16, SECURITY_PATCH++
+	  (CVE-2014-4877, http://www.openwall.com/lists/oss-security/2014/10/27/3)
+
 2014-09-26 Remko van der Vossen <wich@sourcemage.org>
 	* CONFIGURE: properly migrate from openssl to SSL provider
 
