--- a/archive/epm/HISTORY
+++ b/archive/epm/HISTORY
@@ -1,3 +1,8 @@
+2014-10-29 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0], WEB_SITE
+	  Updated description
+	  Updated spell to 4.2
+
 2008-04-06 Lalo Martins <lalo@sourcemage.org>
 	* DETAILS: Spell update; new version (4.1), website, download urls
 
