iotop: Do not abort build on unmet kernel config dep

--- a/utils/iotop/HISTORY
+++ b/utils/iotop/HISTORY
@@ -1,3 +1,7 @@
+2014-10-29 Ismael Luceno <ismael@sourcemage.org>
+	* PREPARE: Don't abort on unmet run-time dependency on kernel
+	  configuration, doesn't hamper build.
+
 2014-02-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.6; switched to upstream pgp check; updated
 	  short description
