--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,6 @@
+2014-10-29 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Remove dependency on SSL, not used anymore
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
