--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,4 +1,5 @@
 2014-10-29 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.11.1
 	* DEPENDS: Removed dependency on SSL and aspell, not used anymore
 
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
