--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,3 +1,6 @@
+22014-10-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.1
+
 22014-09-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.10
 
