--- a/graphics-libs/mesalib/HISTORY
+++ b/graphics-libs/mesalib/HISTORY
@@ -1,3 +1,6 @@
+2014-10-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.3.2
+
 2014-10-18 Jeremy Blosser <jblosser@sourcemage.org>
 	* DETAILS: Add missing 'fi'.
 	* CONFIGURE: Account for $GALLIUM_DRIVERS getting stored as "" when set
