--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,8 @@
+2014-10-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.40.5
+	* DEPENDS: gdk-pixbuf2 is required
+	* CONFLICTS: added
+
 2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.40.5
 	* DEPENDS: no longer uses gtk+2
