--- a/mail/etpan-ng/HISTORY
+++ b/mail/etpan-ng/HISTORY
@@ -1,3 +1,6 @@
+2014-10-30 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 0.7.1
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
