--- a/mail/libetpan/HISTORY
+++ b/mail/libetpan/HISTORY
@@ -1,3 +1,7 @@
+2014-10-30 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.5
+	* BUILD: Run autoreconf to make the configure script
+
 2014-08-24  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: fix bad with-SSL usage
 
