ttf-roboto: Install to /usr/share/fonts/TTF

--- a/fonts-x11/ttf-roboto/HISTORY
+++ b/fonts-x11/ttf-roboto/HISTORY
@@ -1,3 +1,6 @@
+2014-10-30 Ismael Luceno <ismael@sourcemage.org>
+	* HISTORY: Install to /usr/share/fonts/TTF
+
 2013-02-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* INSTALL: install to /usr/share/fonts/X11/TTF/
 
