--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,6 @@
+2014-10-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.9.2
+
 2014-07-25 Treeve Jelbert <treeve@sourcemage.org>
 	* FINAL: use default_final
 
