--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,6 @@
+2014-10-31 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 2.7.8
+
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: depends gettext
 
