--- a/devel/python3/HISTORY
+++ b/devel/python3/HISTORY
@@ -1,3 +1,6 @@
+2014-10-31 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.4.2
+
 2014-08-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add SSL
 
