--- a/net/openvpn/HISTORY
+++ b/net/openvpn/HISTORY
@@ -1,3 +1,7 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.3.5
+	* DEPENDS: added missing pkcs11-helper dependency
+
 2014-09-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.3.4
 	* DEPENDS: made PAM optional; added missing dependencies -- iproute2,
