--- a/net/monit/HISTORY
+++ b/net/monit/HISTORY
@@ -1,3 +1,7 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.10
+	* BUILD: use INSTALL_ROOT
+
 2014-09-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.9
 
