--- a/libs/neon/HISTORY
+++ b/libs/neon/HISTORY
@@ -1,3 +1,8 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.30.1
+	* {SUB_,}DEPENDS, CONFIGURE, {REPAIR^all^,}PRE_SUB_DEPENDS: switched to
+	  SSL provider
+
 2014-04-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1; don't duplicate manuals
 	* PRE_BUILD: added, to apply the patch
