wget: more properly migrate from openssl to SSL provider

--- a/ftp/wget/HISTORY
+++ b/ftp/wget/HISTORY
@@ -1,3 +1,7 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* REPAIR^all^PRE_SUB_DEPENDS: more properly migrate from openssl to SSL
+	  provider
+
 2014-10-27 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 1.16, SECURITY_PATCH++
 	  (CVE-2014-4877, http://www.openwall.com/lists/oss-security/2014/10/27/3)
@@ -8,14 +12,13 @@
 2014-09-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: pcre
 
-2014-08-23  Treeve Jelbert <treeve@sourcemage.org>
+2014-08-23 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS, CONFIGURE: fix libressl support
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: tweak
 
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
-
-        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
 
 2014-01-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.15
