--- a/python-pypi/python-ldap/HISTORY
+++ b/python-pypi/python-ldap/HISTORY
@@ -1,5 +1,9 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.18
+	* PRE_BUILD: use get_spell_provider()
+
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-08-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.15; added source hints to skip ssl check
