stunnel: => 5.06; added cert installation target (missed by previous update)

--- a/net/stunnel/INSTALL
+++ b/net/stunnel/INSTALL
@@ -7,4 +7,6 @@ sedit "s:^organizationName_default.*:organizationName_value = $ORG_NAME:" $STUNN
 sedit "s:^organizationalUnitName_default.*:organizationalUnitName_value = $ORG_UNIT_NAME:" $STUNNEL_CNF &&
 sedit "s:^0\.commonName_default.*:0\.commonName_value = $COMMON_NAME:" $STUNNEL_CNF &&
 
-default_install
+default_install &&
+
+make cert
