--- a/libs/libev/HISTORY
+++ b/libs/libev/HISTORY
@@ -1,3 +1,6 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.19
+
 2013-03-13 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 4.15
 
