--- a/database/mariadb/HISTORY
+++ b/database/mariadb/HISTORY
@@ -1,3 +1,6 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.5.40 (5.5 branch); SECURITY_PATCH=1
+
 2014-09-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.5.39 (5.5 branch)
 	* BUILD: corrected man path for 5.5 branch
