--- a/shell-term-fm/dash/HISTORY
+++ b/shell-term-fm/dash/HISTORY
@@ -1,3 +1,10 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.5.8; added SECURITY_PATCH for forgotten
+	  post-0.5.4 update (CVE-2009-0854)
+	* DEPENDS: added, for libedit optional dependency
+	* CONFIGURE: added, for configure options
+	* BUILD: include DASH_OPTS; use INSTALL_ROOT
+
 2013-12-06 Tommy Boatman <tboatman@sourcemage.org>
 	* DETAILS: 0.5.7
 
