--- a/crypto/ca-certificates/HISTORY
+++ b/crypto/ca-certificates/HISTORY
@@ -1,3 +1,6 @@
+2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 20141019
+
 2014-04-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20140325
 
