pcc: new spell, Portable C Compiler

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-03 Ismael Luceno <ismael@sourcemage.org>
+	* devel/pcc: new spell, Portable C Compiler
+
 2014-10-20 Jeremy Blosser <jblosser@sourcemage.org>
 	* editors/jq: new spell, stream editor/filter for JSON data
 	* python-pypi/botocore: new spell, low-level aws interface library
