--- a/printer/cups-filters/HISTORY
+++ b/printer/cups-filters/HISTORY
@@ -1,3 +1,6 @@
+2014-11-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.61
+
 2014-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* TRIGGERS: added
 	* DEPENDS: add cups, dbus
