box2d: new spell, 2D physics library for Python

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-04 Ismael Luceno <ismael@sourcemage.org>
+	* python-pypi/box2d: new spell, 2D physics library for Python
+
 2014-11-03 Ismael Luceno <ismael@sourcemage.org>
 	* devel/pcc: new spell, Portable C Compiler
 
