--- a/ftp/tnftp/HISTORY
+++ b/ftp/tnftp/HISTORY
@@ -1,3 +1,6 @@
+2014-11-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 20141104
+
 2014-11-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 20141031; SECURITY_PATCH++ (CVE-2014-8517)
 
