--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2014-11-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.2
+
 2014-10-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.1.2
 
