dave_robillard.gpg: updated keyring, added 7364C240 and 9BF368F3 keys

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-07 Vlad Glagolev <stealth@sourcemage.org>
+	* dave_robillard.gpg: updated keyring, added 7364C240 and 9BF368F3 keys
+
 2014-11-04 Ismael Luceno <ismael@sourcemage.org>
 	* python-pypi/box2d: new spell, 2D physics library for Python
 
