--- a/audio-soft/patchage/HISTORY
+++ b/audio-soft/patchage/HISTORY
@@ -1,3 +1,16 @@
+2014-11-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.0; updated source url and renamed source
+	  for VCS branch; updated website, descriptions, keywords
+	* BUILD: use PATCHAGE_OPTS, waf_build()
+	* DEPENDS: rewritten: added PYTHON for waf script; replaced raul and
+	  flowcanvas with ganv; autotools aren't needed for VCS branch; alsa-lib
+	  becomes optional; adapted dbus flags; added missing glib2, glibmm,
+	  gtkmm2, dbus-glib deps; added optional doxygen, graphviz deps; removed
+	  lash (dropped by upstream); updated JACK2 notice; cleaned up
+	* INSTALL: added, for waf_install()
+	* CONFIGURE: added, for configure options
+	* PRE_BUILD: dropped
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
