pyflakes: new spell, passive checker of Python programs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-07 Ismael Luceno <ismael@sourcemage.org>
+	* python-pypi/pyflakes: new spell, passive checker of Python programs
+
 2014-11-07 Vlad Glagolev <stealth@sourcemage.org>
 	* dave_robillard.gpg: updated keyring, added 7364C240 and 9BF368F3 keys
 	* libs/ganv: new spell, interactive Gtkmm canvas widget for graph-based
