--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-08 Treeve Jelbert <treeve@sourcemage.org>
+	* utils/dbus-qt: deleted, obsolete spell
+
 2014-11-07 Ismael Luceno <ismael@sourcemage.org>
 	* python-pypi/pyflakes: new spell, passive checker of Python programs
 
