/gnupg-exp-  add conflics, provides

--- a/crypto/gnupg-exp/HISTORY
+++ b/crypto/gnupg-exp/HISTORY
@@ -1,3 +1,6 @@
+2014-11=-8 Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICST, PROVIDES: added
+
 2014-08-12 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.0.26
 
