--- a/crypto/gpgme/HISTORY
+++ b/crypto/gpgme/HISTORY
@@ -1,3 +1,6 @@
+2014-11-081 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: gnupg-exp => GNUPG
+
 2014-08-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.1
           SECURITY_PATCH++,, fixs CVE-2014-3564
