--- a/utils/mdp/HISTORY
+++ b/utils/mdp/HISTORY
@@ -1,3 +1,6 @@
+204-11-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: gnupg-exp => GNUPG
+
 2014-02-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.7.3
 
