--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2014-11-08 Treeve Jelbert <treeve@sourcemage.org>
 	* utils/dbus-qt: deleted, obsolete spell
+	* crypro/GnuPG.gpg: updated add:
+	  E0856959:  "David Shaw"  <dshaw@jabberwocky.com>
+	  33BD3F06:  "NIIBE Yutaka <gniibe@fsij.org>
 
 2014-11-07 Ismael Luceno <ismael@sourcemage.org>
 	* python-pypi/pyflakes: new spell, passive checker of Python programs
