--- a/crypto/libgpg-error/HISTORY
+++ b/crypto/libgpg-error/HISTORY
@@ -1,3 +1,6 @@
+2014-11-08 Treeve Jelbert <treeve@souremage.org>
+	* DETAILS: version 0.17
+
 2014-09-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.13
 
