--- a/crypto/npth/HISTORY
+++ b/crypto/npth/HISTORY
@@ -1,3 +1,6 @@
+2014-11-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1,1
+
 2012-08-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.91
 
