nes spell gnupg-2.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* crypro/GnuPG.gpg: updated add:
 	  E0856959:  "David Shaw"  <dshaw@jabberwocky.com>
 	  33BD3F06:  "NIIBE Yutaka <gniibe@fsij.org>
+	* gnupg-2.1: added - medern version of gnupg
 
 2014-11-07 Ismael Luceno <ismael@sourcemage.org>
 	* python-pypi/pyflakes: new spell, passive checker of Python programs
