--- a/crypto/scute/HISTORY
+++ b/crypto/scute/HISTORY
@@ -1,3 +1,7 @@
+2014-11-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.0
+	* DEPENDS: GNUPG
+
 2009-06-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.0, scute.gpg -> GnuPG.gpg
 	* scute.gpg: removed
