--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2014-11-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 3.2.19
+
 2014-09-28 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Simplified branch version handling
 	* DETAILS: updated stable branch to 3.2.18
