vile: new spell, vi-like Emacs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-10 Vlad Glagolev <stealth@sourcemage.org>
+	* editors/vile: new spell, vi-like Emacs
+
 2014-11-08 Treeve Jelbert <treeve@sourcemage.org>
 	* utils/dbus-qt: deleted, obsolete spell
 	* crypro/GnuPG.gpg: updated add:
