--- a/net/vtun/HISTORY
+++ b/net/vtun/HISTORY
@@ -1,3 +1,6 @@
+2014-11-11 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 3.0.3
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
