--- a/http/apache22/HISTORY
+++ b/http/apache22/HISTORY
@@ -1,7 +1,9 @@
-2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
-        * DEPENDS: openssl => SSL
+2014-11-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.29; SECURITY_PATCH++ (CVE-2014-0118,
+	  CVE-2014-0231, CVE-2014-0226, CVE-2013-5704)
 
-        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: openssl => SSL
 
 2014-03-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.27; SECURITY_PATCH++ (CVE-2013-6438,
