--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2014-11-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.16.2
+
 2014-09-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.16.1
 	* DEPENDS: now use mesalib
