net/bridge-utils: added a missed header fix from Red Hat patch

--- a/net/bridge-utils/HISTORY
+++ b/net/bridge-utils/HISTORY
@@ -1,3 +1,6 @@
+2014-11-13 Pol Vinogradov <vin.public@gmail.com>
+	* BUILD: added a IPv6 fix from Red Hat patch
+
 2011-07-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5
 
