--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,7 @@
+2014-11-14 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.5.9
+	* PRE_BUILD: removed
+
 2014-07-27 Pol Vinogradov <vin.public@gmail.com>
 	* PRE_BUILD: fixed building with gobject-introspection
 
