--- a/net/tor/HISTORY
+++ b/net/tor/HISTORY
@@ -1,3 +1,7 @@
+2014-11-16 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated TOR_DEVEL=y to 0.2.6.1-alpha
+	  updated TOR_DEVEL=n to 0.2.5.10
+
 2014-09-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: versions 0.2.5.6-alpha
 
