--- a/video/mpv/HISTORY
+++ b/video/mpv/HISTORY
@@ -1,3 +1,7 @@
+2014-11-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.6.2
+	* DEPENDS: remove obsolete depencies
+
 2014-10-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.6.0
 
