--- a/xfce/xfdesktop/HISTORY
+++ b/xfce/xfdesktop/HISTORY
@@ -1,3 +1,6 @@
+2014-11-16 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 4.10.3, removed BRANCH
+
 2013-03-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.10.2
 	* DEPENDS: renewed dependencies
