--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-11-17 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.17.3
+	* info/patches/maintenance_patches_3/patch-3.17.3: added
+
 2014-11-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/kernels/3.17.2, latest.defaults,
 	  info/patches/maintenance_patches_3/patch-3.17.2: version 3.17.2
