--- a/audio-creation/amsynth/HISTORY
+++ b/audio-creation/amsynth/HISTORY
@@ -1,3 +1,10 @@
+2014-11-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.5.1; renewed urls; dropped SPELLX
+	* CONFIGURE: added realtime options
+	* DEPENDS: added lv2 optional dependency
+	* BUILD: use AMSYNTH_OPTS
+	* PRE_BUILD, INSTALL: dropped
+
 2012-12-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.2; renewed urls
 	* BUILD: added missing "&&"
