--- a/net/stunnel/HISTORY
+++ b/net/stunnel/HISTORY
@@ -1,3 +1,7 @@
+2014-11-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.07
+	* init.d/stunnel: added PIDFILE
+
 2014-10-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.06; SECURITY_PATCH++
 	* INSTALL: added 'cert' target
