--- a/kernels/kmod/HISTORY
+++ b/kernels/kmod/HISTORY
@@ -1,3 +1,6 @@
+2014-11-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 19
+
 2014-06-25 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 18
 
