--- a/security/fwknop/HISTORY
+++ b/security/fwknop/HISTORY
@@ -1,3 +1,7 @@
+2014-11-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.6.4
+	* DEPENDS: libpcap becomes optional
+
 2014-07-31 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.6.3
 
