--- a/net/mdnsresponder/HISTORY
+++ b/net/mdnsresponder/HISTORY
@@ -1,3 +1,6 @@
+2014-11-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 561.1.1
+
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 544
 	  update url
