--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,8 @@
+2014-11-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.1
+	* DEPENDS: add optional avahi
+	* BUILD: disable static - causes build problems
+
 2014-10-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add flags for acl
 	  remove references to openssl
