--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-19 Vlad Glagolev <stealth@sourcemage.org>
+	* graphics/maim: new spell, desktop screenshot utility
+
 2014-11-10 Vlad Glagolev <stealth@sourcemage.org>
 	* editors/vile: new spell, vi-like Emacs
 
