--- a/x11/xlockmore/HISTORY
+++ b/x11/xlockmore/HISTORY
@@ -1,4 +1,7 @@
-2014-04-14  Treeve Jelbert <treeve@sourcemage.org>
+2014-11-20 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.44; dropped broken mirror
+
+2014-04-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: mesalib => MESALIB
 
 2013-10-08 Vlad Glagolev <stealth@sourcemage.org>
