--- a/net/traceroute/HISTORY
+++ b/net/traceroute/HISTORY
@@ -1,3 +1,6 @@
+2014-11-21 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.21
+
 2014-07-08 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0]
 	  updated spell to 2.0.20
