--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-11-21 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/speedtest-cli: new spell, Internet bandwidth measurement
+	  tool
+
 2014-11-19 Vlad Glagolev <stealth@sourcemage.org>
 	* graphics/maim: new spell, desktop screenshot utility
 
