glibc: added ability to build valgrind-friendly version

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,8 @@
+2014-11-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* BUILD: allow drop of strip option if a user desires so
+	* CONFIGURE: added, for GLIBC_DEBUG option
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
