glibc: added ability to build valgrind-friendly version (cherry picked from commit 21338d5f7bbf149474af72cde762628a6270be68)
Conflicts:

	libs/glibc/HISTORY

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,8 @@
+2014-11-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* BUILD: allow drop of strip option if a user desires so
+	* CONFIGURE: added, for GLIBC_DEBUG option
+
 2012-05-15 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: fix SOURCE URLS for sigs of kernel versions >=3.0 
 	* PRE_BUILD: correctly verify files with GPG for Kernel headers >=3.1
