--- a/libs/pcre/HISTORY
+++ b/libs/pcre/HISTORY
@@ -1,3 +1,6 @@
+2014-11-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 8.36
+
 2014-04-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 8.35
 
