--- a/python-pypi/lxml/HISTORY
+++ b/python-pypi/lxml/HISTORY
@@ -1,3 +1,6 @@
+2014-11-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.4.1
+
 2014-09-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.4.0
 
