ldns: made GOST support optional for openssl 1.0; added missing options

--- a/libs/ldns/HISTORY
+++ b/libs/ldns/HISTORY
@@ -1,3 +1,8 @@
+2014-11-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* CONFIGURE: added missing options; corrected GOST notice
+	* DEPENDS: made GOST support optional for openssl 1.0 as well
+
 2014-10-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* DEPENDS, CONFIGURE: moved openssl branch selection to CONFIGURE to
