--- a/xorg-app/xkbcomp/HISTORY
+++ b/xorg-app/xkbcomp/HISTORY
@@ -1,3 +1,6 @@
+2014-11-221  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.0
+
 2013-11-23 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.2.4
 
