--- a/crypto/pkcs11-helper/HISTORY
+++ b/crypto/pkcs11-helper/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated spell to 1.11
+
 2012-04-20 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 1.10, fixed SOURCE_URL
 
