dconf: Use disable_pic function to fix CFLAGS

--- a/gnome2-libs/dconf/HISTORY
+++ b/gnome2-libs/dconf/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: Use disable_pic function to fix CFLAGS
+
 2013-09-02 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.16.1
 	  changed SOURCE_URL
