gftp: use SSL provider

--- a/ftp/gftp/HISTORY
+++ b/ftp/gftp/HISTORY
@@ -1,6 +1,7 @@
 2014-11-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: apply patches
+	* DEPENDS: use SSL provider
 	* expanded.patch: backported patch from Gentoo to fix a crash
 	* tmpstr.patch: backported patch from Mageia to fix a crash
 
