--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2014-11-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.42.1
+
 2014-10-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.42.0
 	* PRE_BUILD: not needed
