cmockery: new spell, Lightweight Unit Test library for C

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-11-23 Ismael Luceno <ismael@sourcemage.org>
+	* devel/cmockery: new spell, Lightweight Unit Test library for
+	  C
+
 2014-11-21 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/speedtest-cli: new spell, Internet bandwidth measurement
 	  tool
