gftp: fixed FTPS connections

--- a/ftp/gftp/HISTORY
+++ b/ftp/gftp/HISTORY
@@ -1,3 +1,8 @@
+2014-11-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* PRE_BUILD: apply patch
+	* ftps.patch: added, to fix FTPS connections
+
 2014-11-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* PRE_BUILD: apply patches
