--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-11-24 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.17.4
+	* info/patches/maintenance_patches_3/patch-3.17.4: added
+
 2014-11-17 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.17.3
 	* info/patches/maintenance_patches_3/patch-3.17.3: added
