--- a/audio-drivers/nas/HISTORY
+++ b/audio-drivers/nas/HISTORY
@@ -1,3 +1,6 @@
+2014-11-24 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: updated NAS_DEV=n to 1.9.4
+
 2010-06-26 Vlad Glagolev <stealth@sourcemage.org>
 	* INSTALL: fixed man installation dir; install init config
 	* DETAILS: PATCHLEVEL=1
