--- a/ftp/grsync/HISTORY
+++ b/ftp/grsync/HISTORY
@@ -1,3 +1,6 @@
+2014-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, DETAILS: updated spell to 1.2.5
+
 2009-12-02 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.9.3
 
