--- a/chat-irc/hexchat/HISTORY
+++ b/chat-irc/hexchat/HISTORY
@@ -1,3 +1,8 @@
+2014-10-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.10.2; added SOURCE_HINTS
+	* PRE_BUILD: added, to apply the patch
+	* openssl-09.patch: added, to fix build with openssl 0.9
+
 2014-09-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.10.1; converted to upstream signature
 	  checking; cleaned up
