renameutils: new spell, File renaming utilities

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-26 Ismael Luceno <ismael@sourcemage.org>
+	* utils/renameutils: new spell, File renaming utilities
+
 2014-11-25 Ismael Luceno <ismael@sourcemage.org>
 	* net/torsocks: new spell, use socks-friendly applications with
 	  tor
