--- a/python-pypi/mysql-python/HISTORY
+++ b/python-pypi/mysql-python/HISTORY
@@ -1,3 +1,8 @@
+2014-11-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.5; fixed source url
+	* PRE_BUILD: added, to apply the patch
+	* my_config.patch: added, fixed build
+
 2011-05-23 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: updated setuptools dependency to SETUPTOOLS provider
 
