--- a/utils/pv/HISTORY
+++ b/utils/pv/HISTORY
@@ -1,3 +1,6 @@
+2014-11-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.5.7
+
 2014-05-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.5.3
 
