libspf2: new spell, fully thread safe SPF implementation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-11-28 Vlad Glagolev <stealth@sourcemage.org>
+	* libs/libspf2: new spell, fully thread safe SPF implementation
+
 2014-11-26 Ismael Luceno <ismael@sourcemage.org>
 	* utils/renameutils: new spell, File renaming utilities
 
