setxkbmap: depends on kbproto

--- a/xorg-app/setxkbmap/HISTORY
+++ b/xorg-app/setxkbmap/HISTORY
@@ -1,3 +1,6 @@
+2014-12-01 Ismael Luceno <ismael@sourcemage.org>
+	* DEPENDS: Depends on kbproto
+
 2011-10-30 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.0
 
