libfcgi: fixed build

--- a/libs/libfcgi/HISTORY
+++ b/libs/libfcgi/HISTORY
@@ -1,2 +1,8 @@
+2014-12-01 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: added, to fix multijob build
+	* PRE_BUILD: added, to apply the patch
+	* gcc44.patch: added, backported patch from Debian to fix build with
+	  GCC >=4.4.0
+
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, HISTORY: created spell
