fix gcj build with freetype

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,7 @@
+2014-11-15 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD: patch for freetype2 headers
+	* classpath-ft2include.patch: added said patch
+
 2013-08-13 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 4.6.4
 	  Fixes compilation against texinfo 5.0+
