mawk: Nextfile statement implementation fix

--- a/devel/mawk/HISTORY
+++ b/devel/mawk/HISTORY
@@ -1,5 +1,7 @@
 2014-12-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.3.4-20141027
+	* PRE_BUILD, patches/nextfile-fix.patch: Nextfile statement
+	  implementation fix
 
 2014-09-09 Ismael Luceno <ismael@sourcemage.org>
 	* PROVIDES: Provide AWK
