ffmpeg: SSL flag is --enable-openssl not --enable-SSL

--- a/video/ffmpeg/HISTORY
+++ b/video/ffmpeg/HISTORY
@@ -1,3 +1,6 @@
+2014-12-03 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: SSL flag is --enable-openssl not --enable-SSL
+
 2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
         * DEPENDS: openssl => SSL
 
