wine: Updated 1.7.32 (devel) * PREPARE, sc2-login.diff: Removed, no longer applies cleanly and fails to compile when cleaned up. * CONFIGURE: Remove WINE_SC2_LOGIN persistent variable

--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,9 @@
+2014-12-03 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated 1.7.32 (devel)
+	* PREPARE, sc2-login.diff: Removed, no longer applies cleanly and fails to
+	  compile when cleaned up.
+	* CONFIGURE: Remove WINE_SC2_LOGIN persistent variable
+
 2014-11-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.30 (devel)
 
