glibc: Updated kernel headers to 3.17.4 The prior 2.6.38 headers are getting too old (e.g. libcap requires newer, see https://bugs.launchpad.net/ubuntu/+source/libcap-ng/+bug/684969) * PRE_BUILD: Remove 2.6.x kernel code for non-sanitized headers

--- a/libs/glibc/HISTORY
+++ b/libs/glibc/HISTORY
@@ -1,3 +1,9 @@
+2014-12-03 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated kernel headers to 3.17.4
+	  The prior 2.6.38 headers are getting too old (e.g. libcap requires newer,
+	  see https://bugs.launchpad.net/ubuntu/+source/libcap-ng/+bug/684969)
+	* PRE_BUILD: Remove 2.6.x kernel code for non-sanitized headers
+
 2014-11-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* BUILD: allow drop of strip option if a user desires so
