virtinst: SOURCE_URL moved to https://fedorahosted.org/...

--- a/python-pypi/virtinst/HISTORY
+++ b/python-pypi/virtinst/HISTORY
@@ -1,3 +1,6 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: SOURCE_URL moved to https://fedorahosted.org/...
+
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.600.4
 
