libguestfs:  Updated to 1.28.2

--- a/utils/libguestfs/HISTORY
+++ b/utils/libguestfs/HISTORY
@@ -1,3 +1,7 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.28.2
+	* DEPENDS: Depends on augeas
+
 2013-09-17 Eric Sandall <sandalle@sourcemage.org>
 	* Created
 
