--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-12-04 Eric Sandall <sandalle@sourcemage.org>
+	* ruby-raa/hiera: Added a key/value lookup tool for configuration data
+
 2014-11-28 Vlad Glagolev <stealth@sourcemage.org>
 	* libs/libspf2: new spell, fully thread safe SPF implementation
 
